Run standardRB as part of CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,5 @@ jobs:
         bundler-cache: true
     - name: Run the test task
       run: bundle exec rake test
+    - name: Run standardRB
+      run: bundle exec rake standard
